implement DeleteNote handler
